# Spock

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Spock/: CMakeLists.txt
Spock/include/spock/: application.hh  buffers.hxx  descriptor.hxx  descriptor_set.hxx  descriptor_set_layout.hxx  layer.hh  pipeline.hh  spock.hh  texture.hh  uniform_buffer.hxx  vulkan.hh  window.hh
Spock/src/: application.cc  buffer.cc  common.cc  descriptor_set_layout.cc  device.cc  imgui.cc  layer.cc  pipeline.cc  swapchain.cc  texture2d.cc  vulkan.cc  window.cc
SpockApp/: CMakeLists.txt
SpockApp/include/: example_layer.hh  images.hh  shapes.hh
SpockApp/resources/shaders/: textures.frag.glsl  textures.vert.glsl  triangle.vert.glsl
SpockApp/src/: example_layer.cc  images.cc  main.cc  shapes.cc
